tests/snapshots/examples_fixtures/type_classes__QualifiedClassId__AlphaRender.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/QualifiedClassId/AlphaRender.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `QualifiedClassId.AlphaRender` doesn't match file path `examples/type_classes/QualifiedClassId/AlphaRender.flx`.

  examples/type_classes/QualifiedClassId/AlphaRender.flx:1:1
  |
1 | module QualifiedClassId.AlphaRender {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
