tests/snapshots/examples_fixtures/type_classes__QualifiedClassId__BetaRender.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/QualifiedClassId/BetaRender.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `QualifiedClassId.BetaRender` doesn't match file path `examples/type_classes/QualifiedClassId/BetaRender.flx`.

  examples/type_classes/QualifiedClassId/BetaRender.flx:1:1
  |
1 | module QualifiedClassId.BetaRender {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
